--- a/index.html
+++ b/index.html
@@ -23,20 +23,11 @@
 
 
 <div id="output"></div> 
-
 		<h1 id="id01"></h1>
-
         <h1 id="id02"></h1>  
-
-       
-
-
-
-
-
-
-
-
+        <div id="mic">
+          <img src="media/mic.gif" alt="mic">
+        </div>
 
 	</body>
 </html> 
